tooling/nargo_cli/tests/snapshots/execution_success/brillig_fns_as_values/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
struct MyStruct {
    operation: unconstrained fn(u32) -> u32,
}

fn main(x: u32) {
    // Safety: comment added by `nargo expand`
    unsafe {
        assert(wrapper(increment, x) == (x + 1_u32));
        assert(wrapper(increment_acir, x) == (x + 1_u32));
        assert(wrapper(decrement, x) == (x - 1_u32));
        assert(wrapper_with_struct(MyStruct { operation: increment }, x) == (x + 1_u32));
        assert(wrapper_with_struct(MyStruct { operation: decrement }, x) == (x - 1_u32));
        assert(increment(x) == (x + 1_u32));
    }
}

unconstrained fn wrapper(func: unconstrained fn(u32) -> u32, param: u32) -> u32 {
    func(param)
}

unconstrained fn increment(x: u32) -> u32 {
    x + 1_u32
}

unconstrained fn decrement(x: u32) -> u32 {
    x - 1_u32
}

unconstrained fn wrapper_with_struct(my_struct: MyStruct, param: u32) -> u32 {
    let func: unconstrained fn(u32) -> u32 = my_struct.operation;
    func(param)
}

fn increment_acir(x: u32) -> u32 {
    x + 1_u32
}
